# biblepro

./: .gitignore  Cargo.toml  Dioxus.toml
assets/: styles.css
src/: app.rs  canvas.rs  commands.rs  display.rs  library.rs  license.rs  main.rs  output.rs  plans.rs  present.rs  reader.rs  search.rs  study.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/bible/: catalog.rs  db.rs  importer.rs  lookup.rs  mod.rs  models.rs  schema.rs  search.rs  seeder.rs  study.rs
src-tauri/src/license/: commands.rs  device.rs  keystore.rs  mod.rs  token.rs
src-tauri/src/output/: commands.rs  mod.rs  ndi_recv.rs  role_layouts.rs  routing.rs
src-tauri/src/present/: commands.rs  config.rs  mod.rs  ndi.rs  renderer.rs
src-tauri/src/production/: commands.rs  engine.rs  media_store.rs  mod.rs  models.rs  motion.rs  packs.rs  plan.rs  renderer.rs  scheduler.rs  store.rs  themes.rs  video.rs
src-tauri/src/songs/: commands.rs  mod.rs  models.rs  store.rs
tools/: gen_license.py
ui/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  Display.tsx  main.tsx
ui/src/components/: CommandPalette.tsx  ScriptureNavigator.tsx  Sidebar.tsx
ui/src/hooks/: useProductionEngine.ts  useScriptureEngine.ts
ui/src/lib/: commands.ts  types.ts  utils.ts
ui/src/pages/: Countdowns.tsx  Library.tsx  Media.tsx  Outputs.tsx  Present.tsx  Read.tsx  Settings.tsx  Songs.tsx
ui/src/styles/: globals.css
